included the DragSortAdapter as it needs some modifications to work correctly Fixed Application name resolve logic (didn't work)

--- a/app/src/main/res/layout/activity_settings_entries.xml
+++ b/app/src/main/res/layout/activity_settings_entries.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/activity_settings_entries_container"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical">
+
+    <ImageView
+        android:id="@+id/activity_settings_entries_handle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:alpha="0.5"
+        android:src="@mipmap/ic_reorder_black_48dp"/>
 
     <ImageView
         android:id="@+id/activity_settings_entries_image"
