--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -2,6 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_settings_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -24,4 +26,15 @@
         android:scrollbarStyle="outsideOverlay"
         android:scrollbars="vertical"
         />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/activity_settings_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:src="@mipmap/ic_add_black_24dp"
+        android:layout_margin="6dp"
+        app:elevation="4dp">
+
+    </android.support.design.widget.FloatingActionButton>
 </RelativeLayout>
