--- a/app/src/main/res/layout/activity_settings_entries.xml
+++ b/app/src/main/res/layout/activity_settings_entries.xml
@@ -5,7 +5,12 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:clickable="true"
+    android:focusable="true"
+    android:elevation="2dp"
+    android:layout_margin="2dp"
+    android:background="@drawable/activity_settings_entries_background">
 
     <ImageView
         android:id="@+id/activity_settings_entries_handle"
@@ -17,11 +22,13 @@
 
     <ImageView
         android:id="@+id/activity_settings_entries_image"
+        android:clickable="false"
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/activity_settings_entries_text"
+        android:clickable="false"
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
