--- a/app/src/main/res/drawable/activity_settings_entries_background.xml
+++ b/app/src/main/res/drawable/activity_settings_entries_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@android:color/white" />
+    <item android:drawable="@android:color/background_light" />
     <item android:drawable="?android:selectableItemBackground" />
 </layer-list>
