removed Launch edit fragment & activity as this feature isn't really needed. Tied IntentSelector directly to the FAB for now (until Folders are integrated) Temporary adding of Intents implemented Next step: wire the data access layer, the settings layer and the Launcher layer together

--- a/app/src/main/res/layout/common__intentselectorview.xml
+++ b/app/src/main/res/layout/common__intentselectorview.xml
@@ -8,7 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#96000000"
-        android:gravity="center" >
+        android:gravity="center"
+        android:clickable="true"
+        android:focusable="true">
 
         <ProgressBar
             android:id="@+id/common__intentSelector_progressWait"
