--- a/app/src/main/res/layout/activity_settings_entries.xml
+++ b/app/src/main/res/layout/activity_settings_entries.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:alpha="0.5"
-        android:src="@mipmap/ic_reorder_black_48dp"/>
+        android:src="@mipmap/ic_reorder_black_48dp" />
 
     <ImageView
         android:id="@+id/activity_settings_entries_image"
@@ -35,12 +35,21 @@
         android:layout_height="wrap_content" />
 
     <ImageView
+        android:id="@+id/activity_settings_entries_edit"
+        android:clickable="true"
+        android:layout_margin="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:alpha="0.8"
+        android:src="@mipmap/ic_mode_edit_grey600_36dp" />
+
+    <ImageView
         android:id="@+id/activity_settings_entries_delete"
         android:clickable="true"
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:alpha="0.8"
-        android:src="@mipmap/ic_delete_grey600_36dp"/>
+        android:src="@mipmap/ic_delete_grey600_36dp" />
 
 </LinearLayout>
