first UI version for editing folders wired the add folder context menu to logic that creates a folder and starts editing afterwards

--- a/app/src/main/res/layout/fragment_edit_folder.xml
+++ b/app/src/main/res/layout/fragment_edit_folder.xml
@@ -7,6 +7,8 @@
 
     <LinearLayout
         android:id="@+id/fragment_edit_folder_editname_layout_container"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
@@ -20,6 +22,7 @@
                 android:layout_marginEnd="10dp"
                 android:text="--Name:"/>
             <EditText
+                android:id="@+id/fragment_edit_folder_editname_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
