fixed an app selection bug added notification so that the application service can run in the background without getting problems easily

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="theme_primary">#4CAF50</color>
     <color name="theme_primary_dark">#388E3C</color>
     <color name="theme_accent">#536DFE</color>
+
+    <color name="name_label">#353535</color>
 </resources>
