--- a/app/src/main/res/layout/fragment_edit_folder.xml
+++ b/app/src/main/res/layout/fragment_edit_folder.xml
@@ -10,7 +10,9 @@
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
         <LinearLayout
             android:id="@+id/fragment_edit_folder_editname_layout"
             android:layout_width="match_parent"
@@ -25,7 +27,12 @@
                 android:id="@+id/fragment_edit_folder_editname_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:nextFocusUp="@id/fragment_edit_folder_editname_text"
+                android:nextFocusDown="@id/fragment_edit_folder_editname_text"
+                android:nextFocusLeft="@id/fragment_edit_folder_editname_text"
+                android:nextFocusRight="@id/fragment_edit_folder_editname_text"
+                android:nextFocusForward="@id/fragment_edit_folder_editname_text"/>
         </LinearLayout>
     </LinearLayout>
 
