--- a/app/src/main/res/layout/fragment_edit_folder.xml
+++ b/app/src/main/res/layout/fragment_edit_folder.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
-                android:text="--Name:"/>
+                android:text="@string/fragment_edit_folder_name"/>
             <EditText
                 android:id="@+id/fragment_edit_folder_editname_text"
                 android:layout_width="0dp"
