added delay before notifying the service because of data changes

--- a/app/src/main/res/layout/fragment_edit_folder.xml
+++ b/app/src/main/res/layout/fragment_edit_folder.xml
@@ -28,6 +28,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:singleLine="true"
                 android:nextFocusUp="@id/fragment_edit_folder_editname_text"
                 android:nextFocusDown="@id/fragment_edit_folder_editname_text"
                 android:nextFocusLeft="@id/fragment_edit_folder_editname_text"
