--- a/app/src/main/res/layout/activity_edit_folder.xml
+++ b/app/src/main/res/layout/activity_edit_folder.xml
@@ -3,11 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="de.devmil.paperlaunch.EditFolderActivity">
+
+    <include
+        android:id="@+id/activity_edit_folder_toolbar"
+        layout="@layout/toolbar"
+        />
 
     <FrameLayout
         android:id="@+id/activity_edit_folder_folder_fragment"
+        android:layout_below="@id/activity_edit_folder_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
