--- a/app/src/main/res/layout/fragment_edit_folder.xml
+++ b/app/src/main/res/layout/fragment_edit_folder.xml
@@ -39,6 +39,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_edit_folder_entrieslist"
+        android:paddingTop="@dimen/entries_list_padding_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/fragment_edit_folder_editname_layout_container"
