first, empty settings screen. Using a PreferenceFragment didn't work well because this fragment shall be used in non-PreferenceActivity contexts and the interaction with the persistency layer is through the UserSettings and not directly to PersistentSettings

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,6 +1,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_settings_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
@@ -10,9 +11,10 @@
         layout="@layout/toolbar"
         />
 
+
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/activity_settings_fragment"
+        android:id="@+id/fragment"
         android:name="de.devmil.paperlaunch.view.fragments.SettingsActivityFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
