--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -11,13 +11,11 @@
         layout="@layout/toolbar"
         />
 
-
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/fragment"
-        android:name="de.devmil.paperlaunch.view.fragments.SettingsActivityFragment"
+    <LinearLayout
+        android:id="@+id/activity_settings_fragment_placeholder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/fragment_settings" />
+        android:layout_below="@id/activity_settings_toolbar"
+        android:orientation="vertical"/>
 
 </RelativeLayout>
