--- a/app/src/main/res/layout/fragment_edit_folder.xml
+++ b/app/src/main/res/layout/fragment_edit_folder.xml
@@ -37,6 +37,26 @@
         </LinearLayout>
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/fragment_edit_folder_emptyentries"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:elevation="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_below="@id/fragment_edit_folder_editname_layout_container"
+        android:background="@drawable/fragment_edit_folder_entries_background"
+        android:visibility="gone"
+        android:gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fragment_edit_folder_empty_hint"/>
+    </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_edit_folder_entrieslist"
         android:paddingTop="@dimen/entries_list_padding_top"
@@ -65,6 +85,6 @@
         android:minHeight="@dimen/fab_margin_bottom"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"></LinearLayout>
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
