--- a/app/src/main/res/layout/preference_seekbar.xml
+++ b/app/src/main/res/layout/preference_seekbar.xml
@@ -5,9 +5,8 @@
 
     <TextView
         android:id="@+id/preference_seekbar_label"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:ellipsize="marquee"
         android:fadingEdge="horizontal"
