added left activation side option fixed view behavior for left activation side increased vibration duration from 30 to 60ms

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -9,4 +9,6 @@
     <item type="id" name="id_launchview_lane6" />
     <item type="id" name="id_launchview_lane7" />
     <item type="id" name="id_launchview_lane8" />
+    <item type="id" name="id_launchview_lane9" />
+    <item type="id" name="id_launchview_lane10" />
 </resources>
