--- a/app/src/main/res/layout-land/feature_image.xml
+++ b/app/src/main/res/layout-land/feature_image.xml
@@ -3,6 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
+    android:layout_marginStart="@dimen/activity_horizontal_margin"
+    android:layout_marginEnd="@dimen/activity_horizontal_margin"
     android:orientation="horizontal"
     android:gravity="center_vertical">
     <ImageView
