--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="theme_primary">#4CAF50</color>
-    <color name="theme_primary_dark">#388E3C</color>
-    <color name="theme_accent">#536DFE</color>
+    <color name="theme_primary">#2196F3</color>
+    <color name="theme_primary_dark">#1976D2</color>
+    <color name="theme_accent">#03A9F4</color>
+    <color name="theme_primary_text">#212121</color>
+    <color name="theme_primary_light">#BBDEFB</color>
+    <color name="theme_secondary_text">#727272</color>
 
     <color name="name_label">#353535</color>
 </resources>
