--- a/app/src/main/res/layout/common__intentselectorview.xml
+++ b/app/src/main/res/layout/common__intentselectorview.xml
@@ -3,6 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <include
+        android:id="@+id/common__intentSelector_toolbar"
+        layout="@layout/toolbar"
+        />
+
     <LinearLayout
         android:id="@+id/common__intentSelector_llWait"
         android:layout_width="match_parent"
