--- a/app/src/main/res/layout/feature_image.xml
+++ b/app/src/main/res/layout/feature_image.xml
@@ -9,7 +9,8 @@
         android:layout_height="wrap_content"
         android:scaleType="fitStart"
         android:adjustViewBounds="true"
-        android:src="@mipmap/featuregraphic" />
+        android:src="@mipmap/featuregraphic"
+        android:contentDescription="@string/feature_image_content_description"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
