--- a/app/src/main/res/layout/common__intentselectorgroup.xml
+++ b/app/src/main/res/layout/common__intentselectorgroup.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" android:layout_height="fill_parent">
-	<ImageView android:id="@+id/common__intentselectorgroup_img"
-		android:layout_height="40dip" android:layout_width="40dip"
-		android:layout_marginLeft="40dip"></ImageView>
-	<TextView android:id="@+id/common__intentselectorgroup_text"
-		android:layout_width="fill_parent" android:layout_height="45dip"
-		android:text="Group" android:gravity="center_vertical|right"
-		android:paddingLeft="5dip" android:paddingRight="5dip"
-		android:textStyle="bold" android:textSize="17dip"></TextView>
+	<ImageView
+		android:id="@+id/common__intentselectorgroup_img"
+		android:layout_height="40dip"
+		android:layout_width="40dip"
+		android:layout_marginStart="40dip"
+		android:contentDescription="@string/common__intentselectorgroup_img_content_description"/>
+	<TextView
+		android:id="@+id/common__intentselectorgroup_text"
+		android:layout_width="fill_parent"
+		android:layout_height="45dip"
+		android:text="@string/common__intentselectorgroup_text_default"
+		android:gravity="center_vertical|end"
+		android:paddingLeft="5dip"
+		android:paddingRight="5dip"
+		android:textStyle="bold"
+		android:textSize="17sp" />
 </LinearLayout>
