--- a/app/src/main/res/layout/fragment_edit_folder_entries.xml
+++ b/app/src/main/res/layout/fragment_edit_folder_entries.xml
@@ -21,14 +21,16 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:alpha="0.5"
-        android:src="@mipmap/ic_reorder_grey600_24dp" />
+        android:src="@mipmap/ic_reorder_grey600_24dp"
+        android:contentDescription="@string/fragment_edit_folder_entries_handle_content_description"/>
 
     <ImageView
         android:id="@+id/fragment_edit_folder_entries_image"
         android:clickable="false"
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/fragment_edit_folder_entries_image_content_description"/>
     <TextView
         android:id="@+id/fragment_edit_folder_entries_text"
         android:clickable="false"
@@ -44,7 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:alpha="0.8"
-        android:src="@mipmap/ic_mode_edit_grey600_24dp" />
+        android:src="@mipmap/ic_mode_edit_grey600_24dp"
+        android:contentDescription="@string/fragment_edit_folder_entries_details_content_description"/>
 
     <ImageView
         android:id="@+id/fragment_edit_folder_entries_delete"
@@ -53,6 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:alpha="0.8"
-        android:src="@mipmap/ic_delete_grey600_24dp" />
+        android:src="@mipmap/ic_delete_grey600_24dp"
+        android:contentDescription="@string/fragment_edit_folder_entries_delete_content_description"/>
 
 </LinearLayout>
