--- a/app/src/main/res/layout/fragment_edit_folder_entries.xml
+++ b/app/src/main/res/layout/fragment_edit_folder_entries.xml
@@ -28,8 +28,9 @@
         android:id="@+id/fragment_edit_folder_entries_image"
         android:clickable="false"
         android:layout_margin="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:scaleType="centerInside"
         android:contentDescription="@string/fragment_edit_folder_entries_image_content_description"/>
     <TextView
         android:id="@+id/fragment_edit_folder_entries_text"
