--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,22 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <include
-        android:id="@+id/activity_main_toolbar"
-        layout="@layout/toolbar"
-        />
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/activity_main_toolbarlayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <include
+            android:id="@+id/activity_main_toolbar"
+            layout="@layout/toolbar"
+            />
+    </android.support.design.widget.AppBarLayout>
 
     <fragment
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:name="de.devmil.paperlaunch.view.fragments.EditFolderFragment"
         android:id="@+id/activity_main_editfolder_fragment"
-        android:layout_below="@+id/activity_main_toolbar"
+        android:layout_below="@+id/activity_main_toolbarlayout"
         android:layout_alignParentStart="true"
         tools:layout="@layout/fragment_edit_folder" />
 
