--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,16 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
 
-    <include
-        android:id="@+id/activity_settings_toolbar"
-        layout="@layout/toolbar"
-        />
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/activity_settings_toolbarlayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <include
+            android:id="@+id/activity_settings_toolbar"
+            layout="@layout/toolbar"
+            />
+    </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
         android:id="@+id/activity_settings_fragment_placeholder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/activity_settings_toolbar"
+        android:layout_below="@id/activity_settings_toolbarlayout"
         android:orientation="vertical"/>
 
 </RelativeLayout>
