--- a/app/src/main/res/layout/feature_image.xml
+++ b/app/src/main/res/layout/feature_image.xml
@@ -11,11 +11,24 @@
         android:adjustViewBounds="true"
         android:src="@mipmap/featuregraphic"
         android:contentDescription="@string/feature_image_content_description"/>
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/activity_about_copyright"/>
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/feature_image_versiontext"
+            android:layout_marginEnd="10dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/activity_about_copyright"/>
+    </LinearLayout>
 
 </LinearLayout>
 
