--- a/app/src/main/res/layout/preference_seekbar.xml
+++ b/app/src/main/res/layout/preference_seekbar.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
@@ -11,11 +11,12 @@
         android:ellipsize="marquee"
         android:fadingEdge="horizontal"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="@dimen/preference_seekbar_margin_left"/>
+        android:layout_marginStart="@dimen/preference_seekbar_margin_left"
+        />
 
     <SeekBar
         android:id="@+id/preference_seekbar_seek"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"/>
