compile and target SDK bump to 25 switched to newest support library (adding google maven repository) bugfix for recycler view entry height (was match_parent, is now wrap_content)

--- a/app/src/main/res/layout/fragment_edit_folder_entries.xml
+++ b/app/src/main/res/layout/fragment_edit_folder_entries.xml
@@ -4,7 +4,7 @@
     android:id="@+id/fragment_edit_folder_entries_container"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:clickable="true"
     android:focusable="true"
