--- a/app/src/main/res/layout/activity_about_info_entry.xml
+++ b/app/src/main/res/layout/activity_about_info_entry.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
     android:layout_margin="10dp"
     android:elevation="2dp"
