--- a/app/src/main/res/layout/fragment_edit_folder.xml
+++ b/app/src/main/res/layout/fragment_edit_folder.xml
@@ -1,87 +1,141 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="de.devmil.paperlaunch.view.fragments.EditFolderFragment">
-
-    <LinearLayout
-        android:id="@+id/fragment_edit_folder_editname_layout_container"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:focusable="true"
-        android:focusableInTouchMode="true">
+        android:layout_height="match_parent">
         <LinearLayout
-            android:id="@+id/fragment_edit_folder_editname_layout"
+            android:id="@+id/fragment_edit_folder_editname_layout_container"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:focusable="true"
+            android:focusableInTouchMode="true">
+            <LinearLayout
+                android:id="@+id/fragment_edit_folder_editname_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/fragment_edit_folder_name"/>
+                <EditText
+                    android:id="@+id/fragment_edit_folder_editname_text"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    android:hint="@string/fragment_edit_folder_editname_text_hint"
+                    android:imeOptions="actionDone"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/fragment_edit_folder_emptyentries"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:elevation="2dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_below="@id/fragment_edit_folder_editname_layout_container"
+            android:background="@drawable/fragment_edit_folder_entries_background"
+            android:visibility="gone"
+            android:gravity="center">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:text="@string/fragment_edit_folder_name"/>
-            <EditText
-                android:id="@+id/fragment_edit_folder_editname_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:singleLine="true"
-                android:hint="@string/fragment_edit_folder_editname_text_hint"
-                android:imeOptions="actionDone"/>
+                android:text="@string/fragment_edit_folder_empty_hint"/>
         </LinearLayout>
-    </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/fragment_edit_folder_emptyentries"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:elevation="2dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_below="@id/fragment_edit_folder_editname_layout_container"
-        android:background="@drawable/fragment_edit_folder_entries_background"
-        android:visibility="gone"
-        android:gravity="center">
-        <TextView
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fragment_edit_folder_entrieslist"
+            android:paddingTop="@dimen/entries_list_padding_top"
+            android:paddingBottom="@dimen/entries_list_padding_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_edit_folder_editname_layout_container"
+            android:clipToPadding="false"
+            android:scrollbarStyle="outsideOverlay"
+            android:scrollbars="vertical"
+            />
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fragment_edit_folder_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/fragment_edit_folder_empty_hint"/>
-    </LinearLayout>
+            android:layout_above="@+id/fragment_edit_folder_fab_padding"
+            android:layout_alignParentEnd="true"
+            android:src="@mipmap/ic_add_black_24dp"
+            android:layout_margin="10dp"
+            app:elevation="4dp">
+        </android.support.design.widget.FloatingActionButton>
+        <LinearLayout
+            android:id="@id/fragment_edit_folder_fab_padding"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/fab_margin_bottom"
+            android:minHeight="@dimen/fab_margin_bottom"
+            android:orientation="horizontal"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/fragment_edit_folder_entrieslist"
-        android:paddingTop="@dimen/entries_list_padding_top"
-        android:paddingBottom="@dimen/entries_list_padding_bottom"
+    <RelativeLayout
+        android:id="@+id/fragment_edit_folder_bottom_sheet"
+        android:background="@android:color/white"
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+        app:behavior_hideable="true"
+        android:clipToPadding="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/fragment_edit_folder_editname_layout_container"
-        android:clipToPadding="false"
-        android:scrollbarStyle="outsideOverlay"
-        android:scrollbars="vertical"
-        />
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fragment_edit_folder_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/fragment_edit_folder_fab_padding"
-        android:layout_alignParentEnd="true"
-        android:src="@mipmap/ic_add_black_24dp"
-        android:layout_margin="10dp"
-        app:elevation="4dp">
-    </android.support.design.widget.FloatingActionButton>
-    <LinearLayout
-        android:id="@id/fragment_edit_folder_fab_padding"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/fab_margin_bottom"
-        android:minHeight="@dimen/fab_margin_bottom"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:id="@+id/fragment_edit_folder_bottom_sheet_button_bar"
+            style="?android:attr/buttonBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                style="?android:attr/buttonBarButtonStyle"
+                android:id="@+id/fragment_edit_folder_add_app"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:drawableTop="@mipmap/ic_link_black_48dp"
+                android:text="@string/folder_settings_add_app"/>
+            <Button
+                style="?android:attr/buttonBarButtonStyle"
+                android:id="@+id/fragment_edit_folder_add_url"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:drawableTop="@mipmap/ic_web_black_48dp"
+                android:text="@string/folder_settings_add_url"/>
+            <Button
+                style="?android:attr/buttonBarButtonStyle"
+                android:id="@+id/fragment_edit_folder_add_folder"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:drawableTop="@mipmap/ic_folder_black_48dp"
+                android:text="@string/folder_settings_add_folder"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_edit_folder_bottom_sheet_button_bar"
+            android:orientation="horizontal"
+            android:gravity="end">
+            <Button
+                android:id="@+id/fragment_edit_folder_add_cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/folder_settings_add_cancel"/>
+        </LinearLayout>
+    </RelativeLayout>
 
-</RelativeLayout>
+
+</android.support.design.widget.CoordinatorLayout>
