--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context="de.devmil.paperlaunch.AboutActivity">
 
     <android.support.design.widget.AppBarLayout
