--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -1,11 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Base application theme. -->
     <style name="Theme.PaperLaunch" parent="@style/Theme.AppCompat.Light.DarkActionBar">
         <item name="colorAccent">@color/theme_accent</item>
         <item name="colorPrimary">@color/theme_primary</item>
         <item name="colorPrimaryDark">@color/theme_primary_dark</item>
         <!-- Status bar configuration for API 35+ -->
         <item name="android:statusBarColor">@color/theme_primary_light</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 </resources>
